# proxy-wasm-cpp-host

./: BUILD
bazel/: BUILD  repositories.bzl  select.bzl
bazel/cargo/: BUILD.bazel  Cargo.toml  crates.bzl
bazel/cargo/remote/: BUILD.cfg-if-0.1.10.bazel  BUILD.cranelift-bforest-0.74.0.bazel  BUILD.cranelift-codegen-0.74.0.bazel  BUILD.cranelift-codegen-meta-0.74.0.bazel  BUILD.cranelift-codegen-shared-0.74.0.bazel  BUILD.cranelift-entity-0.74.0.bazel  BUILD.cranelift-frontend-0.74.0.bazel  BUILD.crossbeam-channel-0.5.1.bazel  BUILD.crossbeam-deque-0.8.0.bazel  BUILD.crossbeam-epoch-0.9.5.bazel  BUILD.crossbeam-utils-0.8.5.bazel  BUILD.ctor-0.1.20.bazel  BUILD.darling-0.13.0.bazel  BUILD.darling_core-0.13.0.bazel  BUILD.darling_macro-0.13.0.bazel  BUILD.dynasm-1.1.0.bazel  BUILD.dynasmrt-1.1.0.bazel  BUILD.enumset-1.0.7.bazel  BUILD.enumset_derive-0.5.5.bazel  BUILD.erased-serde-0.3.16.bazel  BUILD.generational-arena-0.2.8.bazel  BUILD.ghost-0.1.2.bazel  BUILD.gimli-0.24.0.bazel  BUILD.ident_case-1.0.1.bazel  BUILD.inkwell_internals-0.3.0.bazel  BUILD.instant-0.1.10.bazel  BUILD.inventory-0.1.10.bazel  BUILD.inventory-impl-0.1.10.bazel  BUILD.leb128-0.2.4.bazel  BUILD.libloading-0.7.0.bazel  BUILD.llvm-sys-110.0.1.bazel  BUILD.lock_api-0.4.4.bazel  BUILD.loupe-0.1.3.bazel  BUILD.loupe-derive-0.1.3.bazel  BUILD.memmap2-0.2.3.bazel  BUILD.num_cpus-1.13.0.bazel  BUILD.object-0.25.3.bazel  BUILD.parking_lot-0.11.1.bazel  BUILD.parking_lot_core-0.8.3.bazel  BUILD.pest-2.1.3.bazel  (+56 more)
include/proxy-wasm/: wasmer.h
src/wasmer/: types.h  wasmer.cc  wasmtime.cc
test/: utility.h
