[package]
edition = "2018"
name = "wasmtime-c-api-bazel"
version = "0.25.0"

[lib]
path = "fake_lib.rs"

[dependencies]
#wasmtime
env_logger = "0.8"
anyhow = "1.0"
once_cell = "1.3"
wasmtime = { version = "0.26.0", default-features = false }
wasmtime-c-api-macros = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.26.0", path = "crates/c-api/macros" }
wasmsign = { git = "https://github.com/jedisct1/wasmsign", revision = "fa4d5598f778390df09be94232972b5b865a56b8" }
#wasmer
wasmer = { version = "2.0.0", default-features = false }
#wasmer-compiler-llvm = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/compiler-llvm" }
#wasmer-emscripten = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/emscripten" }
#wasmer-engine = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/engine" }
#wasmer-engine-universal = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/engine-universal" }
#wasmer-engine-dylib = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/engine-dylib" }
#wasmer-engine-staticlib = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/engine-staticlib" }
#wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/middlewares" }
#wasmer-wasi = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/wasi" }
#wasmer-types = { git = "https://github.com/wasmerio/wasmer", tag = "2.0.0", path = "lib/types" }
enumset = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
typetag = { version = "0.1" }
paste = "1.0"

[package.metadata.raze]
rust_rules_workspace_name = "rules_rust"
gen_workspace_prefix = "proxy_wasm_cpp_host"
genmode = "Remote"
package_aliases_dir = "."
workspace_path = "//bazel/cargo"

[package.metadata.raze.crates.wasmsign.'*']
extra_aliased_targets = ["cargo_bin_wasmsign"]
