[package]
edition = "2018"
name = "wasmtime-c-api-bazel"
version = "0.25.0"

[lib]
path = "fake_lib.rs"

[dependencies]
#wasmtime
env_logger = "0.8"
anyhow = "1.0"
once_cell = "1.3"
wasmtime = { version = "0.26.0", default-features = false }
wasmtime-c-api-macros = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.26.0", path = "crates/c-api/macros" }
wasmsign = { git = "https://github.com/jedisct1/wasmsign", revision = "fa4d5598f778390df09be94232972b5b865a56b8" }
#wasmer
wasmer-api = { git = "https://github.com/wasmerio/wasmer", default-features = false, tag = "2.0.0", path = "lib/api", package="wasmer" }
wasmer-compiler-cranelift = { version = "2.0.0", optional = true }
wasmer-compiler-singlepass = { version = "2.0.0", optional = true }
wasmer-compiler-llvm = { version = "2.0.0", optional = true }
wasmer-emscripten = { version = "2.0.0", optional = true }
wasmer-engine = "2.0.0"
wasmer-engine-universal = { version = "2.0.0", optional = true }
wasmer-engine-dylib = { version = "2.0.0", optional = true }
wasmer-engine-staticlib = { version = "2.0.0", optional = true }
wasmer-middlewares = { version = "2.0.0", optional = true }
wasmer-wasi = { version = "2.0.0", optional = true }
wasmer-types = "2.0.0"
#wasmer-compiler-llvm = "2.0.0"
#wasmer-engine = "2.0.0"
#wasmer-engine-universal = "2.0.0"
#wasmer-middlewares = "2.0.0"
#wasmer-types = "2.0.0"
enumset = "1.0"
cfg-if = "1.0"
lazy_static = "1.4"
libc = { version = "^0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
typetag = { version = "0.1" }
paste = "1.0"

[package.metadata.raze]
rust_rules_workspace_name = "rules_rust"
gen_workspace_prefix = "proxy_wasm_cpp_host"
genmode = "Remote"
package_aliases_dir = "."
workspace_path = "//bazel/cargo"

[package.metadata.raze.crates.wasmsign.'*']
extra_aliased_targets = ["cargo_bin_wasmsign"]
